style: set pokemon time to inline-block - solve problem with alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -24,3 +24,9 @@ body {
   height: 140px;
   padding: 5% 0;
 }
+
+.pokeType {
+  display: inline-block;
+  padding: 0 15px;
+}
+
